css/mobile-styles.css
/*mobile styles by Michael McGowan*/
/*information about targeting mobile device from Rob Gravelle at: http://www.htmlgoodies.com/beyond/css/targeting-specific-devices-in-your-style-sheets.html*/

@media only screen and (max-width: 400px){

/*navigation*/
.navbar{
  padding-right: 0px;
}

.icons{
  padding-bottom: 50px;
}

#dashboard{
  left:5%;
}

#people{
  left:20%;
}

#chat{
  left:35%;
}

#tag{
  left:50%;
}

#edit{
  left:65%;
}

#stats{
  left:80%
}

#chevron{
  left:7.5%;
  margin-bottom:-65px;
}

/*dashboard search bar*/
.dash {
  margin: 10px 0px -10px;
}

.dash img{
  left: 87%;
}

/*announcements leading and alignment*/
.announcements{
  line-height: 17px;
}

.announcements .center{
  margin: 10px 0px;
}

/*tasks and recommendations and analytics borders*/
.tasks, .rec, .activity{
  border-right: none;
}

.rec{
  padding-bottom: 5px;
}

/*analytics donuts and social media spacing*/
.donuts{
  padding: 0px;
  margin: 0px 10px 0px 55px;
}

.donuts div{
  display: inline-block;
  width: 40%;
  margin: 0px 10px;
}

.donuts div *{
  margin: 10px 0px;
}

.donuts h5{
  margin-left: 10px;
}

.social-col{
  padding: 0px;
  border-bottom: none;
}

.social-tag{
  font-size: 10px;
  line-height: 20px;
  margin: 0 -5px 0 -10px;
}

/*contacts*/
.contacts{
  min-height: 550px;
}

.contact-tile{
  min-height: 275px;
  margin-top: -20px;
}















}

